--- a/Actividad1.ipynb
+++ b/Actividad1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe8mAxdQu7H2GhTjv+ywY+",
+      "authorship_tag": "ABX9TyMcPowGXCQwQcvR5z++8Tx+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,26 +56,26 @@
       "cell_type": "code",
       "source": [
         "# @title Programa 2\n",
-        "num1 = 10\n",
-        "num2 = 5\n",
-        "suma = num1 + num2\n",
-        "print(num1, \" + \", num2, \" = \", suma)"
+        "num1 = float(input(\"Dame un numero: \"))\n",
+        "num2 = float(input(\"Dame otro numero: \"))\n",
+        "print(f\"La suma de los numeros es: {num1 + num2}\")"
       ],
       "metadata": {
-        "cellView": "form",
+        "id": "LKBjmN8HxTgk",
+        "outputId": "4394a671-7547-4506-a7cb-81cedece8c80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "LKBjmN8HxTgk",
-        "outputId": "1f5e7513-e642-4315-be1f-b298b678c5ec"
+        }
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10  +  5  =  15\n"
+            "Dame un numero: 10.5\n",
+            "Dame otro numero: 30.2\n",
+            "La suma de los numeros es: 40.7\n"
           ]
         }
       ]
@@ -84,31 +84,33 @@
       "cell_type": "code",
       "source": [
         "# @title Programa 3\n",
-        "num1 = 10\n",
-        "num2 = 4\n",
-        "print(\"Suma: \", num1, \" + \", num2, \" = \", num1+num2)\n",
-        "print(\"Resta: \", num1, \" - \", num2, \" = \", num1-num2)\n",
-        "print(\"Multiplicacion: \", num1, \" * \", num2, \" = \", num1*num2)\n",
-        "print(\"Divicion: \", num1, \" / \", num2, \" = \", num1/num2)"
+        "num1 = float(input(\"Dame un numero: \"))\n",
+        "num2 = float(input(\"Dame otro numero: \"))\n",
+        "print(f\"Suma: {num1 + num2}\")\n",
+        "print(f\"Resta: {num1 - num2}\")\n",
+        "print(f\"Multiplicacion: {num1 * num2}\")\n",
+        "print(f\"Divicion: {num1 / num2}\")"
       ],
       "metadata": {
         "cellView": "form",
+        "id": "DhIxNFLSyIkT",
+        "outputId": "e93b4aa8-1545-4a57-d25b-25cc9d37b58e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "DhIxNFLSyIkT",
-        "outputId": "26691b77-18f0-42d9-c98d-1f8669a347b2"
+        }
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Suma:  10  +  4  =  14\n",
-            "Resta:  10  -  4  =  6\n",
-            "Multiplicacion:  10  *  4  =  40\n",
-            "Divicion:  10  /  4  =  2.5\n"
+            "Dame un numero: 10\n",
+            "Dame otro numero: 10\n",
+            "Suma: 20.0\n",
+            "Resta: 0.0\n",
+            "Multiplicacion: 100.0\n",
+            "Divicion: 1.0\n"
           ]
         }
       ]
@@ -117,25 +119,57 @@
       "cell_type": "code",
       "source": [
         "# @title Programa 4\n",
-        "base = 10\n",
-        "altura = 20\n",
+        "base = float(input(\"Cual es el valor de la base?: \"))\n",
+        "altura = float(input(\"Cual es el valor de su altura?: \"))\n",
         "area_triangulo = base*altura/2\n",
-        "print(\"El area del triangulo de base \", base, \", altura \", altura, \" es de:\", area_triangulo)"
+        "print(f\"El area del triangulo de base {base}, altura {altura} es de: {area_triangulo}\")"
       ],
       "metadata": {
+        "id": "ueNyjuDPzA3k",
+        "outputId": "0b93f097-404f-4e52-e913-969acff4c8fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ueNyjuDPzA3k",
-        "outputId": "c134e4fd-2f75-447d-a888-8fced009ec32"
+        "cellView": "form"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "El area del triangulo de base  10 , altura  20  es de: 100.0\n"
+            "Cual es el valor de la base?: 10\n",
+            "Cual es el valor de su altura?: 20\n",
+            "El area del triangulo de base 10.0, altura 20.0 es de: 100.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Programa 5\n",
+        "medida_cm = float(input(\"Cuanto mide en centimetros?: \"))\n",
+        "medida_ft = int(medida_cm / 30.48)\n",
+        "residuo = round(((medida_cm % 30.48) / (2.54)), 2)\n",
+        "print(f\"Mide {medida_ft} pies con {residuo} pulgadas\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "zQ5nUvEQxokJ",
+        "outputId": "c424acd5-31c0-4bb3-8164-5b6799018cf5"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cuanto mide en centimetros?: 178\n",
+            "Mide 5 pies con 10.08 pulgadas\n"
           ]
         }
       ]
