--- a/Actividad1.ipynb
+++ b/Actividad1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcPowGXCQwQcvR5z++8Tx+",
+      "authorship_tag": "ABX9TyP6bW/bW7pxAzOX6a+yrjer",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wOV3s7i0EjZB",
-        "outputId": "509cb8a7-53ef-43b0-efbd-a688311b38a3",
-        "cellView": "form"
+        "outputId": "509cb8a7-53ef-43b0-efbd-a688311b38a3"
       },
       "outputs": [
         {
@@ -160,9 +159,9 @@
         },
         "cellView": "form",
         "id": "zQ5nUvEQxokJ",
-        "outputId": "c424acd5-31c0-4bb3-8164-5b6799018cf5"
+        "outputId": "c52ff309-b880-4571-d8ae-7b5bed7396c0"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,6 +169,69 @@
           "text": [
             "Cuanto mide en centimetros?: 178\n",
             "Mide 5 pies con 10.08 pulgadas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Programa 6\n",
+        "centigrados = float(input(\"Cuantos grados celcius?: \"))\n",
+        "farenh = (centigrados * (9/5)) + 32 \n",
+        "print(f\"{centigrados} grados celcius son {farenh} grados farenheit\", end = \"\")\n",
+        "print(f\" y {centigrados + 273.15} grados Kelvin\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "4A5MF3CX05_s",
+        "outputId": "99f857bf-6ca7-439a-b872-3f0d34a87c66"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cuantos grados celcius?: 0\n",
+            "0.0 grados celcius son 32.0 grados farenheit y 273.15 grados Kelvin\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Programa 7\n",
+        "parcial1 = int(input(\"Dame la calificacion del primer parcial: \"))\n",
+        "parcial2 = int(input(\"Dame la calificacion del segundo parcial: \"))\n",
+        "parcial3 = int(input(\"Dame la calificacion del tercer parcial: \"))\n",
+        "parcial4 = int(input(\"Dame la calificacion del cuarto parcial: \"))\n",
+        "promedio = parcial1 + parcial2 + parcial3 + parcial4\n",
+        "print(f\"El promedio final del estudiante es de {round(promedio/4, 2)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "ie12tG2o3Etz",
+        "outputId": "4ee76d7a-6c29-46d6-ab3c-87e4afd43d01"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame la calificacion del primer parcial: 10\n",
+            "Dame la calificacion del segundo parcial: 10\n",
+            "Dame la calificacion del tercer parcial: 10\n",
+            "Dame la calificacion del cuarto parcial: 9\n",
+            "El promedio final del estudiante es de 9.75\n"
           ]
         }
       ]
