Creado mediante Colaboratory

--- a/GYT_PY_exa1.ipynb
+++ b/GYT_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcK952GbtWX+rNljKMUY5e",
+      "authorship_tag": "ABX9TyNXZzzYdAt8J5tCexYngNGJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,17 @@
       "metadata": {
         "id": "MBczeBw5vuTF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "rOld5CR_wVu1"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -76,6 +87,34 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lista_random():\n",
+        "  num = list(range(20, 100))\n",
+        "  lista = random.sample(num, 30)\n",
+        "\n",
+        "  print(lista)\n",
+        "lista_random()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9wBxw3nPwX1s",
+        "outputId": "a41782af-3581-46f5-c169-347fc1e9ae14"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[51, 45, 64, 98, 47, 69, 31, 58, 34, 24, 25, 96, 66, 80, 70, 86, 41, 53, 78, 56, 57, 91, 72, 59, 84, 42, 90, 99, 87, 81]\n"
+          ]
+        }
+      ]
     }
   ]
 }
