Creado mediante Colaboratory

--- a/GYT_PY_exa1.ipynb
+++ b/GYT_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXZzzYdAt8J5tCexYngNGJ",
+      "authorship_tag": "ABX9TyPwMiereUOc8QQkqKgMYoil",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Crear una lista de 30 numeros (20, 100) no repetidos"
+      ],
+      "metadata": {
+        "id": "S7XRvBAx06vs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "ri = int(input(\"Dame el rango inferior: \"))\n",
@@ -112,6 +121,52 @@
           "name": "stdout",
           "text": [
             "[51, 45, 64, 98, 47, 69, 31, 58, 34, 24, 25, 96, 66, 80, 70, 86, 41, 53, 78, 56, 57, 91, 72, 59, 84, 42, 90, 99, 87, 81]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Escribe una funcion de Python en collaboratory que realice lo siguiente:\n",
+        "\n",
+        "funcion que retorne el resultado del area de un triangulo\n",
+        "\n",
+        "Escribir codigo que mande llamar la funcion y desplegar el resultado,\n",
+        "\n",
+        "VALIDAR da tos entrada"
+      ],
+      "metadata": {
+        "id": "9OyjQQj81C92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def area_triangulo(base = 0, altura = 0):\n",
+        "  area = (base * altura) / 2\n",
+        "  print(f\"El area de tu triangulo es de: {area} unidades cuadradas\")\n",
+        "\n",
+        "base = int(input(\"Dame el valor de la base: \"))\n",
+        "altura = int(input(\"Dame el valor de la altura: \"))\n",
+        "area_triangulo(base, altura)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N7sKWZN21Eb3",
+        "outputId": "e3b54e60-9580-4ee4-d8c0-f457d1fc092f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame el valor de la base: 10\n",
+            "Dame el valor de la altura: 10\n",
+            "El area de tu triangulo es de: 50.0 unidades cuadradas\n"
           ]
         }
       ]
