Creado mediante Colaboratory

--- a/GYT_PY_exa1.ipynb
+++ b/GYT_PY_exa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwMiereUOc8QQkqKgMYoil",
+      "authorship_tag": "ABX9TyO50pcu3YDs+aOBuCIzqzjI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,15 +76,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Crear una lista de 30 numeros (20, 100) no repetidos"
-      ],
-      "metadata": {
-        "id": "S7XRvBAx06vs"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "ri = int(input(\"Dame el rango inferior: \"))\n",
@@ -92,10 +83,47 @@
         "vali_num(ri, rf)"
       ],
       "metadata": {
-        "id": "hD1ZDWWtuwME"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hD1ZDWWtuwME",
+        "outputId": "ce50823f-81b8-4ba0-d8f5-512a7960ac83"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dame el rango inferior: 100\n",
+            "Dame el rango superior: 200\n",
+            "Dame un numero: 15\n",
+            "Error de rango \n",
+            "Dame un numero: lol\n",
+            "Solo numeros \n",
+            "Dame un numero: 150\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "150"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Crear una lista de 30 numeros (20, 100) no repetidos"
+      ],
+      "metadata": {
+        "id": "S7XRvBAx06vs"
+      }
     },
     {
       "cell_type": "code",
